initial description